# rust-ddd

./: Cargo.toml
src/application/: Cargo.toml
src/cmd/: Cargo.toml
src/cmd/src/: main.rs  settings.rs
src/domain/src/: entities.rs  entity.rs  lib.rs
src/infra/: Cargo.toml
src/infra/src/: config.rs  lib.rs  migrations.rs
src/presentation/: Cargo.toml
src/presentation/src/: api.rs  config.rs  lib.rs  requests.rs
