[workspace]
members = [ "src/application","src/cmd", "src/domain", "src/infra", "src/presentation"]


[workspace.dependencies]
#web framework
axum = { version = "0.7.5" }
axum-macros = "0.4.1"
#env
dotenv = { version = "0.15.0" }
#log
env_logger = { version = "0.11.3" }
hyper = { version = "1.2.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
#json
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.115" }

async-trait = "0.1.79"
tokio = { version = "1.36.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
uuid = { verson = "1.3", features = ["v4", "serde"] }
#db
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
deadpool-postgres = { version = "0.12.1", features = ["serde"] }
postgres-types = { version = "0.2", features = ["uuid-1"] }
refinery = { version = "0.8", features = ["tokio-postgres"] }
config = "0.14.0"
